--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -28,6 +28,12 @@ body {
   background-color: black;
   border-radius: 4px;
   margin-top: 20px;
+  border: 2px solid grey;
+}
+
+.body-top * button:hover {
+  box-shadow: 0px 0px 10px 10px rgb(30, 255, 30);
+  transform: scale(1.1);
 }
 
 .buttons > button {
