--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -31,7 +31,21 @@ body {
   border: 2px solid grey;
 }
 
+.body-top * a {
+  background-color: black;
+  border-radius: 4px;
+  margin-top: 20px;
+  border: 2px solid grey;
+  text-align: center;
+  padding: 2px;
+}
+
 .body-top * button:hover {
+  box-shadow: 0px 0px 10px 10px rgb(30, 255, 30);
+  transform: scale(1.1);
+}
+
+.body-top * a:hover {
   box-shadow: 0px 0px 10px 10px rgb(30, 255, 30);
   transform: scale(1.1);
 }
